# kuksa-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  opencode.jsonc  pyproject.toml
.github/workflows/: docker.yml  test.yml
docs/: api-coverage.md  architecture.md  getting-started.md  index.md
examples/: local_test.py  prompts.md
src/kuksa_mcp_server/: __init__.py  __main__.py  client.py  config.py  resources.py  server.py  tools.py
tests/: test_client.py  test_resources.py  test_tools.py
