[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kuksa-mcp-server"
version = "0.1.0"
description = "MCP server for Eclipse Kuksa Databroker — give LLMs access to vehicle signals"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["kuksa", "databroker", "mcp", "vss", "vehicle", "automotive"]
authors = [
  { name = "Mike Haller", email = "mike.haller@etas.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

dependencies = [
  "mcp>=1.0.0,<2.0.0",
  "kuksa-client>=0.5.0,<1.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "hatchling>=1.0",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
]
examples = [
  "mcp>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/mikehaller/kuksa-mcp-server"
Repository = "https://github.com/mikehaller/kuksa-mcp-server"
Documentation = "https://github.com/mikehaller/kuksa-mcp-server/docs"

[project.scripts]
kuksa-mcp = "kuksa_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kuksa_mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "/examples"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
